Bugfix on confetti-view, UI change detected words

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dash_maze_runner
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.0
+version: 0.1.1
 
 environment:
   sdk: '>=3.3.3 <4.0.0'
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.0
   flutter_vision: ^1.1.4
   google_mlkit_text_recognition: ^0.12.1
   provider: ^6.1.2
@@ -41,8 +42,26 @@ flutter:
 
 flutter_launcher_icons:
   android: "launcher_icon"
-  ios: false
+  ios: true
   image_path: "assets/launcher_icons/android/play_store_512.png"
   adaptive_icon_background: "assets/launcher_icons/android/res/mipmap-xxxhdpi/ic_launcher_background.png"
   adaptive_icon_foreground: "assets/launcher_icons/android/res/mipmap-xxxhdpi/ic_launcher_foreground.png"
   min_sdk_android: 21
+
+flutter_native_splash:
+  # Customize the parameters below, and run the following command in the terminal:
+  # dart run flutter_native_splash:create
+  # To restore Flutter's default white splash screen, run the following command in the terminal:
+  # dart run flutter_native_splash:remove
+
+  color: "#36c7ff"
+  
+  android_12:
+    # Splash screen background color.
+    color: "#36c7ff"
+
+  # The android, ios and web parameters can be used to disable generating a splash screen on a given
+  # platform.
+  #android: false
+  ios: true
+  #web: false
